--- a/modul1-2.html
+++ b/modul1-2.html
@@ -16,46 +16,38 @@
             <li><a class="head" href="https://www.google.com">travel</a> </li>
         </ul>
     </header>
-    <ul class="image">
-            <ol>
-    <img src="./images/image.jpg" alt="Girl">
-            </ol>
-            <section class="morelife">
-                <h7 class="right">Lifestyle</h7>
-                <h3 class="right">More than just a music festival</h3>
-                <p class="right">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Libero ipsam, voluptas consequuntur, expedita ea nihil quos maiores eveniet impedit autem fugiat alias voluptates eaque consequatur. Iure eius accusamus id ex.</p>
-            </section>
-    </ul>
-        <ul class="image2">
-            <ol> 
-    <img src="./images/image2.jpg" alt="Coffee">
-            </ol>
-       <section class="morelife">
-        <h7 class="right">lifestyle</h7>
-        <h3 class="right">Life tastes better with coffee</h3> 
-        <p class="right">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Libero ipsam, voluptas consequuntur, expedita ea nihil quos maiores eveniet impedit autem fugiat alias voluptates eaque consequatur. Iure eius accusamus id ex.</p>
-        </section>
-    </ul> 
-       <ul class="image3">
-            <ol>
-    <img src="./images/image3.jpg" alt="2 Girl">
-            </ol>
-            <section class="morelife2">
-                <h7 class="right">photodiary</h7>
-                <h3 class="right">American dream</h3>
-                <p class="right">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam fugiat voluptates blanditiis voluptate non dolore laudantium illo aliquid perferendis nam error distinctio architecto nulla corporis explicabo, cum excepturi quod?</p>        
-            </section>
-        </ul>
-            <ul class="image4">          
-            <ol> 
-    <img src="./images/image4.jpg" alt="Boy">
-            </ol>
-                    <section class="morelife2">
-                        <h7 class="right">photodiary</h7>
-                        <h3 class="right">A day exploring the Alps</h3>
-                        <p class="right">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam fugiat voluptates blanditiis voluptate non dolore laudantium illo aliquid perferendis nam error distinctio architecto nulla corporis explicabo, cum excepturi quod?</p>        
-            </section>
-        </ul>
+    <img src="./images/image.jpg" alt="More than just a music festival" title="More than just a music festival">
+    <p>Lifestyle</p>
+    <h3>More than just a music festival</h3>
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deserunt unde eos, eligendi accusamus asperiores repudiandae illo dolorem dolore quod incidunt totam exercitationem. Incidunt nam voluptates explicabo. Modi, voluptas! Laudantium, animi!
+    Quasi ut unde, nihil pariatur voluptatum omnis. Eveniet consectetur iusto tempore mollitia! Vero ut libero facere obcaecati, adipisci ipsum minima quibusdam optio expedita aut id error alias laudantium veniam iste.
+    Sapiente eligendi quidem cupiditate mollitia dolorem nostrum ea excepturi voluptate architecto blanditiis quod fuga rem officia beatae at, dignissimos nihil ipsa, quasi quo culpa officiis veritatis sed exercitationem? Id, ut.
+    Ex, magni esse impedit dolorem asperiores natus neque voluptatibus voluptates, optio illo tempora. Magni nesciunt totam minima mollitia quasi ab, corporis, inventore suscipit, praesentium quo explicabo dicta qui itaque velit.
+    </p>
+    <img src="./images/image2.jpg" alt="Life tastes better with coffee" title="Life tastes better with coffee">
+    <p>lifestyle</p>
+    <h3>Life tastes better with coffee</h3>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit provident magnam accusantium eligendi. Fuga ipsum accusantium laborum expedita dolorem quam rerum maxime fugiat dolore eius, aut iste quo ullam cupiditate!
+    Corrupti blanditiis perspiciatis fugiat, dolorum repellat et pariatur at eveniet nam, earum asperiores perferendis nesciunt tempore illo incidunt eum, esse voluptatibus. Ipsum qui maxime temporibus ut vitae fugiat voluptate consequatur!
+    Fuga numquam officia veniam officiis odit expedita corporis modi dolorem blanditiis. Quidem odio reprehenderit iste minima excepturi praesentium doloremque neque voluptas. Ratione voluptatem cum sequi eius esse labore quidem voluptatibus!
+    Ex, in eos molestiae amet possimus, neque est veniam commodi iusto assumenda ipsa facilis a laudantium quidem aperiam veritatis illo temporibus tempore. Eaque enim corrupti rerum veritatis ipsa rem deserunt.
+    </p>
+    <img src="./images/image3.jpg" alt="American dream" title="American dream">
+    <p>photodiary</p>
+    <h3>American dream</h3>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex libero vero ratione illo quasi error dignissimos repellendus numquam fugiat, magnam fugit dolorem suscipit reiciendis, commodi doloremque consequatur, cupiditate deleniti autem.
+    Fugit soluta distinctio ex, porro labore odio vel asperiores incidunt enim ullam! Id consequatur, tenetur velit vel molestiae sapiente quia dolorem recusandae vitae. Soluta, consectetur numquam. Dolores, dolorum. Nostrum, est!
+    Temporibus dignissimos in illo, aliquam officia perferendis ut! Sunt veritatis, quisquam deserunt perspiciatis reiciendis nemo dolorem tempora sapiente ipsa exercitationem, aspernatur labore eaque quas error dicta nisi voluptates repudiandae aliquam!
+    Quae nobis aut dolor maxime, cum culpa tempora velit similique modi eligendi rem eaque, excepturi fugit. Minus corrupti, vitae, nisi quisquam, sint accusamus nam minima repudiandae quidem natus distinctio est.
+    </p>
+    <img src="./images/image4.jpg" alt="A day exploring the Alps" title="A day exploring the Alps">
+    <p>photodiary</p>
+    <h4>A day exploring the Alps</h4>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum magnam provident enim fugit vel tempora quaerat laudantium eveniet distinctio ab dolorem architecto consectetur nulla accusantium ex, quasi, aliquam eligendi delectus?
+    Officia beatae eum sed, architecto ipsa labore, velit tempora impedit ullam magnam laborum repudiandae exercitationem dolores, culpa fugit non laudantium eveniet deserunt? Ullam animi facere enim cum quae voluptas consectetur.
+    Rerum doloribus officia velit necessitatibus atque nemo ullam culpa itaque odit sit repellat voluptatem eaque tempore, distinctio quibusdam cupiditate. Quis sapiente sed, odio sit quidem iure odit est repudiandae molestias?
+    Illo provident possimus nam architecto dolore saepe aliquid ea numquam quas atque, distinctio ipsa illum error officia ut, beatae maiores, dignissimos vero incidunt. Deleniti, magni. Assumenda in perferendis inventore laudantium.
+    </p>
         <p style="text-align: left"><a href="http://google.com.ua" target="_blank"><button>load more</button></a>  
 </body>
 </html>
