--- a/htmlcss/module7/index.html
+++ b/htmlcss/module7/index.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Oleo+Script&amp;subset=latin-ext" rel="stylesheet">
 
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="./css/style.css">
     <title>Golden</title>
 </head>
 <body>
